# lesson1

./: CMakeLists.txt  README.md  voxel.txt
includes/: info_get.h  point.h  root_directory.h
includes/learnopengl/: camera.h  shader_m.h
origin/: main_f  main_v  raycasting.cg  raycasting.cpp
src/: 2.py  6.3.coordinate_systems.fs  6.3.coordinate_systems.vs  coordinate_systems_multiple.cpp  info_get.cpp  voxel.txt
